--- a/StudyProject/StudyProject.csproj
+++ b/StudyProject/StudyProject.csproj
@@ -236,6 +236,8 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="Controllers\Tutor\TutorController.cs" />
+    <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="eStudy.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -251,9 +253,24 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>eStudy.edmx</DependentUpon>
     </Compile>
-    <Compile Include="App_Start\FilterConfig.cs" />
-    <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Models\Core\InstitutionBuilder.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\EnterSystemController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MainController.cs" />
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Core\CustomAuthorizeAttribute.cs" />
+    <Compile Include="Models\Core\UserBuilder.cs" />
+    <Compile Include="Models\Core\UserIdentity.cs" />
+    <Compile Include="Models\Core\UserRole.cs" />
+    <Compile Include="Models\HashGenerator.cs" />
+    <Compile Include="Models\PassCoder.cs" />
+    <Compile Include="Models\RegexUtilities.cs" />
+    <Compile Include="Models\RegistrationModel.cs" />
+    <Compile Include="Models\UserInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sysdiagrams.cs">
       <DependentUpon>eStudy.tt</DependentUpon>
     </Compile>
@@ -293,35 +310,8 @@
     <Compile Include="tbUser.cs">
       <DependentUpon>eStudy.tt</DependentUpon>
     </Compile>
-    <Compile Include="Controllers\AdminController.cs" />
-    <Compile Include="Controllers\EnterSystemController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\MainController.cs" />
-    <Compile Include="Global.asax.cs">
-      <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Core\CustomAuthorizeAttribute.cs" />
-    <Compile Include="Models\Core\UserBuilder.cs" />
-    <Compile Include="Models\Core\UserIdentity.cs" />
-    <Compile Include="Models\Core\UserRole.cs" />
-    <Compile Include="Models\HashGenerator.cs" />
-    <Compile Include="Models\PassCoder.cs" />
-    <Compile Include="Models\RegexUtilities.cs" />
-    <Compile Include="Models\RegistrationModel.cs" />
-    <Compile Include="Models\UserInfo.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="eStudy.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>eStudy.edmx</DependentUpon>
-      <LastGenOutput>eStudy.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="eStudy.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>eStudy.edmx</DependentUpon>
-      <LastGenOutput>eStudy.cs</LastGenOutput>
-    </Content>
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-grid.rtl.css" />
@@ -391,6 +381,16 @@
     <Content Include="dist\js\pages\dashboard.js" />
     <Content Include="dist\js\pages\dashboard2.js" />
     <Content Include="dist\js\pages\dashboard3.js" />
+    <Content Include="eStudy.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>eStudy.edmx</DependentUpon>
+      <LastGenOutput>eStudy.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="eStudy.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>eStudy.edmx</DependentUpon>
+      <LastGenOutput>eStudy.cs</LastGenOutput>
+    </Content>
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -2546,10 +2546,9 @@
     <Content Include="Views\EnterSystem\Register.cshtml" />
     <Content Include="Views\Admin\UserManagement.cshtml" />
     <Content Include="Views\Admin\InstitutionManagement.cshtml" />
-    <Content Include="Views\Admin\AddNewInstitution.cshtml" />
-    <Content Include="Views\Admin\EditInstitution.cshtml" />
     <Content Include="Views\Tutor\Groups.cshtml" />
     <Content Include="Views\Tutor\UsersGroup.cshtml" />
+    <Content Include="Views\Admin\InstitutionUsers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
