--- a/StudyProject/StudyProject.csproj
+++ b/StudyProject/StudyProject.csproj
@@ -253,6 +253,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>eStudy.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\Core\CheckField.cs" />
     <Compile Include="Models\Core\InstitutionBuilder.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\EnterSystemController.cs" />
@@ -269,6 +270,7 @@
     <Compile Include="Models\PassCoder.cs" />
     <Compile Include="Models\RegexUtilities.cs" />
     <Compile Include="Models\RegistrationModel.cs" />
+    <Compile Include="Models\SelectImage.cs" />
     <Compile Include="Models\UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sysdiagrams.cs">
@@ -299,6 +301,9 @@
       <DependentUpon>eStudy.tt</DependentUpon>
     </Compile>
     <Compile Include="tbTaskResult.cs">
+      <DependentUpon>eStudy.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tbTaskVariant.cs">
       <DependentUpon>eStudy.tt</DependentUpon>
     </Compile>
     <Compile Include="tbTest.cs">
@@ -343,6 +348,9 @@
     <Content Include="dist\css\alt\adminlte.plugins.css" />
     <Content Include="dist\css\alt\adminlte.plugins.min.css" />
     <Content Include="dist\img\AdminLTELogo.png" />
+    <Content Include="dist\img\autumn.jpg" />
+    <Content Include="dist\img\autumn1.jpg" />
+    <Content Include="dist\img\autumn2.jpg" />
     <Content Include="dist\img\avatar.png" />
     <Content Include="dist\img\avatar2.png" />
     <Content Include="dist\img\avatar3.png" />
@@ -367,6 +375,12 @@
     <Content Include="dist\img\prod-3.jpg" />
     <Content Include="dist\img\prod-4.jpg" />
     <Content Include="dist\img\prod-5.jpg" />
+    <Content Include="dist\img\spring.jpg" />
+    <Content Include="dist\img\spring1.jpg" />
+    <Content Include="dist\img\spring2.jpg" />
+    <Content Include="dist\img\summer.jpg" />
+    <Content Include="dist\img\summer1.jpg" />
+    <Content Include="dist\img\summer2.jpg" />
     <Content Include="dist\img\user1-128x128.jpg" />
     <Content Include="dist\img\user2-160x160.jpg" />
     <Content Include="dist\img\user3-128x128.jpg" />
@@ -375,6 +389,9 @@
     <Content Include="dist\img\user6-128x128.jpg" />
     <Content Include="dist\img\user7-128x128.jpg" />
     <Content Include="dist\img\user8-128x128.jpg" />
+    <Content Include="dist\img\winter.jpg" />
+    <Content Include="dist\img\winter1.jpg" />
+    <Content Include="dist\img\winter2.jpg" />
     <Content Include="dist\js\adminlte.js" />
     <Content Include="dist\js\adminlte.min.js" />
     <Content Include="dist\js\demo.js" />
@@ -2518,6 +2535,9 @@
     <Content Include="eStudy.edmx.diagram">
       <DependentUpon>eStudy.edmx</DependentUpon>
     </Content>
+    <Content Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -2549,6 +2569,12 @@
     <Content Include="Views\Tutor\Groups.cshtml" />
     <Content Include="Views\Tutor\UsersGroup.cshtml" />
     <Content Include="Views\Admin\InstitutionUsers.cshtml" />
+    <Content Include="Views\Tutor\TutorInstitution.cshtml" />
+    <Content Include="Views\Tutor\TutorMaterials.cshtml" />
+    <Content Include="Views\Tutor\ViewMateril.cshtml" />
+    <Content Include="Views\Tutor\TutorTests.cshtml" />
+    <Content Include="Views\Tutor\ViewTest.cshtml" />
+    <Content Include="Views\Tutor\ViewVariant.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
