Add functional for creating lessons

--- a/StudyProject/StudyProject.csproj
+++ b/StudyProject/StudyProject.csproj
@@ -289,9 +289,6 @@
     <Compile Include="tbLesson.cs">
       <DependentUpon>eStudy.tt</DependentUpon>
     </Compile>
-    <Compile Include="tbLesson_Group.cs">
-      <DependentUpon>eStudy.tt</DependentUpon>
-    </Compile>
     <Compile Include="tbMaterials.cs">
       <DependentUpon>eStudy.tt</DependentUpon>
     </Compile>
@@ -2577,6 +2574,7 @@
     <Content Include="Views\Tutor\ViewTest.cshtml" />
     <Content Include="Views\Tutor\ViewVariant.cshtml" />
     <Content Include="Views\EnterSystem\Invite.cshtml" />
+    <Content Include="Views\Tutor\Lessons.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
